[gd_scene load_steps=24 format=3 uid="uid://hf54dvayfhfp"]

[ext_resource type="Script" path="res://scripts/Team.gd" id="2_qon7g"]
[ext_resource type="MeshLibrary" uid="uid://dc8u7nxstkwfp" path="res://assets/Modelos 3D/space station kenney/Library/space_station_library.tres" id="2_tbimu"]
[ext_resource type="Texture2D" uid="uid://b4x4wyx723h8q" path="res://assets/Iconos/UI/pause-button.svg" id="4_lvo3o"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/joystick/virtual_joystick_scene.tscn" id="5_otsi1"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="5_thfdy"]
[ext_resource type="Script" path="res://scripts/Ball.gd" id="6_i326r"]
[ext_resource type="Script" path="res://scripts/score_manager.gd" id="7_ephk5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34eua"]
albedo_color = Color(0.207843, 0.623529, 0.109804, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6e3lt"]
albedo_color = Color(0.945281, 0.129458, 0.176349, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_cif0x"]
size = Vector3(0.776048, 0.838601, 0.717716)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_23vym"]
albedo_color = Color(0.0977035, 0.258915, 0.435264, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_uv6fw"]
size = Vector3(17.9935, 5.99512, 0.15625)

[sub_resource type="BoxShape3D" id="BoxShape3D_qj1ei"]
size = Vector3(54.157, 6.31775, 0.183105)

[sub_resource type="Gradient" id="Gradient_jy8xr"]
offsets = PackedFloat32Array(0.129921, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 0.964706, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sym4f"]
gradient = SubResource("Gradient_jy8xr")

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_km4k3"]
rayleigh_coefficient = 6.2

[sub_resource type="Sky" id="Sky_pqv4c"]
sky_material = SubResource("PhysicalSkyMaterial_km4k3")

[sub_resource type="Environment" id="Environment_qmlgc"]
background_mode = 2
background_energy_multiplier = 0.69
sky = SubResource("Sky_pqv4c")
tonemap_mode = 3
tonemap_exposure = 0.9
sdfgi_read_sky_light = false
adjustment_enabled = true
adjustment_saturation = 1.2
adjustment_color_correction = SubResource("GradientTexture1D_sym4f")

[sub_resource type="Gradient" id="Gradient_lcu8q"]
offsets = PackedFloat32Array(0.996528, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_afqlx"]
gradient = SubResource("Gradient_lcu8q")

[sub_resource type="BoxShape3D" id="BoxShape3D_5ht4i"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_yho6n"]
friction = 0.0
bounce = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_fr8sp"]

[node name="Game" type="Node"]

[node name="Environment" type="Node" parent="."]

[node name="GridMap2" type="GridMap" parent="Environment"]
visible = false
mesh_library = ExtResource("2_tbimu")
cell_size = Vector3(3, 1, 3)
cell_center_y = false
cell_center_z = false
cell_scale = 3.0
data = {
"cells": PackedInt32Array(65533, 65529, 110, 65534, 65529, 110, 65535, 65529, 110, 0, 65529, 110, 1, 65529, 110, 2, 65529, 110, 262141, 65529, 1048611, 262142, 65529, 655397, 262143, 65529, 655397, 196608, 65529, 655397, 196609, 65529, 655397, 196610, 65529, 655395, 196608, 65528, 1048610, 262143, 65528, 1048615, 262141, 65528, 1048613, 196609, 65528, 1048615, 196610, 65528, 1048613, 196610, 65527, 1048613, 196609, 65526, 1048615, 196608, 65526, 1048610, 262143, 65526, 1048615, 196608, 65527, 1048615, 196609, 65527, 1048610, 262143, 65527, 1048610, 262142, 65527, 1048615, 262142, 65526, 1048610, 262141, 65526, 1048612, 262141, 65527, 1048613, 196610, 65526, 1048612, 262142, 65528, 1048610)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="GridMap3" type="GridMap" parent="Environment"]
mesh_library = ExtResource("2_tbimu")
cell_size = Vector3(3, 1, 3)
cell_center_y = false
cell_scale = 3.0
data = {
"cells": PackedInt32Array(65533, 65528, 1048611, 2, 65528, 655395, -65536, 1, 35, 1, 65528, 655397, 0, 65528, 655397, 65535, 65528, 655397, 65534, 65528, 655397, 65534, 65527, 655394, 0, 65527, 655394, 2, 65527, 1048613, 65533, 65527, 1048613, 65535, 65527, 1048615, 1, 65527, 1048615, 65537, 65527, 1441806, 65536, 65527, 1048595, 131070, 65527, 1048593, 131071, 65527, 1441804, 65533, 65526, 1048612, 2, 65526, 1048612, 1, 65526, 1441848, 65534, 65526, 1048632, -1, 65526, 1048632, -65536, 65526, 1441848, 131069, 65528, 655446, 65538, 65528, 655446, 65538, 65527, 655404, 131069, 65526, 655404, 131069, 65527, 655400, 196605, 65526, 655406, 262141, 65526, 655406, 327677, 65526, 655406, 131074, 65527, 40, 65534, 8, 37, 65535, 8, 37, 0, 8, 37, 1, 8, 37, 2, 8, 1441827, 65533, 8, 35, 2, 9, 1441829, 65533, 9, 1441829, 65535, 9, 1441826, 1, 9, 1441826, 0, 9, 1441831, 65534, 9, 1441831, 131070, 9, 655422, 65537, 9, 655422, 65536, 9, 18, 131071, 9, 17, 131069, 9, 50, 65538, 9, 82, 65538, 8, 42, 131074, 8, 41, 131069, 8, 1441878)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="Floor" type="CSGBox3D" parent="Environment"]
transform = Transform3D(14.4098, 0, 0, 0, 0.00811265, 0, 0, 0, 9.043, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_34eua")
use_collision = true
size = Vector3(1.24515, 1, 6.04259)
metadata/_edit_lock_ = true

[node name="Goal A" type="CSGCylinder3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.096745, 20.6919)
material_override = SubResource("StandardMaterial3D_6e3lt")
radius = 1.5
height = 0.3
sides = 16

[node name="Area3D" type="Area3D" parent="Environment/Goal A"]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Goal A/Area3D"]
transform = Transform3D(3.24487, 0, 0, 0, 3.24487, 0, 0, 0, 3.24487, 0, 0.748212, 0.0711651)
shape = SubResource("BoxShape3D_cif0x")

[node name="Goal B" type="CSGCylinder3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.096745, -18.5674)
material_override = SubResource("StandardMaterial3D_23vym")
radius = 1.5
height = 0.3
sides = 16

[node name="Area3D" type="Area3D" parent="Environment/Goal B"]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Goal B/Area3D"]
transform = Transform3D(3.24487, 0, 0, 0, 3.24487, 0, 0, 0, 3.24487, 0, 1.27072, 0.0711651)
shape = SubResource("BoxShape3D_cif0x")

[node name="CSGBox3D" type="CSGBox3D" parent="Environment"]
transform = Transform3D(17.9985, 0, 0, 0, 2.38044, 0, 0, 0, 0.0509532, 0, 0.178811, 0)
size = Vector3(1, 0.140869, 1)

[node name="Collisions" type="Node" parent="Environment"]

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Collisions"]
collision_layer = 12
collision_mask = 12
metadata/_edit_lock_ = true

[node name="Back" type="CollisionShape3D" parent="Environment/Collisions/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0286803, 3.41836, 23.8784)
shape = SubResource("BoxShape3D_uv6fw")

[node name="Front" type="CollisionShape3D" parent="Environment/Collisions/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0286803, 3.41836, -20.6031)
shape = SubResource("BoxShape3D_uv6fw")

[node name="Right" type="CollisionShape3D" parent="Environment/Collisions/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.09551, 3.2047, 0.352308)
shape = SubResource("BoxShape3D_qj1ei")

[node name="Left" type="CollisionShape3D" parent="Environment/Collisions/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.1407, 3.2047, 0.352307)
shape = SubResource("BoxShape3D_qj1ei")

[node name="Medio" type="StaticBody3D" parent="Environment/Collisions"]
collision_layer = 8
collision_mask = 8
metadata/_edit_lock_ = true

[node name="Front" type="CollisionShape3D" parent="Environment/Collisions/Medio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0286803, 3.41836, 0.0127635)
shape = SubResource("BoxShape3D_uv6fw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_qmlgc")

[node name="DirectionalLight3D_SKY" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.806527, 0.591197, 0, -0.591197, -0.806527, 0, 17.7869, -12.9163)
light_energy = 20.0
sky_mode = 2

[node name="DirectionalLight3D_SUN" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.986561, 0.163395, 0, -0.163395, 0.986561, 0, 17.7869, -12.9163)
sky_mode = 1

[node name="Team A" type="Node" parent="." node_paths=PackedStringArray("goal")]
script = ExtResource("2_qon7g")
goal = NodePath("../Environment/Goal A/Area3D")

[node name="Ball Spawn A" type="Marker3D" parent="Team A"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0568333, 0.949508, 3.76684)

[node name="Team B" type="Node" parent="." node_paths=PackedStringArray("goal")]
script = ExtResource("2_qon7g")
goal = NodePath("../Environment/Goal B/Area3D")

[node name="Ball Spawn B" type="Marker3D" parent="Team B"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.057, 0.95, -3.767)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual Joystick" parent="UI" instance=ExtResource("5_otsi1")]
unique_name_in_owner = true
anchors_preset = 15
anchor_top = 0.0
anchor_right = 1.0
offset_top = 639.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
joystick_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Base" parent="UI/Virtual Joystick" index="0"]
anchors_preset = -1
anchor_top = 0.751
anchor_bottom = 0.751
offset_top = -100.391
offset_bottom = 99.609

[node name="Loading" type="TextureRect" parent="UI"]
auto_translate_mode = 1
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("GradientTexture1D_afqlx")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/Loading"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -44.0
offset_right = 150.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Loading..."
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Button" parent="UI"]
auto_translate_mode = 1
offset_right = 808.0
offset_bottom = 808.0
scale = Vector2(0.0764221, 0.0764224)
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_lvo3o")
flat = true
icon_alignment = 1

[node name="PauseMenu" type="VBoxContainer" parent="UI"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -98.0
offset_right = 193.5
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="UI/PauseMenu"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Resume "

[node name="Exit" type="Button" parent="UI/PauseMenu"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Exit"

[node name="Scores" type="SplitContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
vertical = true

[node name="Score A" type="Label" parent="UI/Scores"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 300
text = "0"
horizontal_alignment = 1

[node name="Score B" type="Label" parent="UI/Scores"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 300
text = "0"
horizontal_alignment = 1

[node name="BallFuturePosition" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0568333, 0.949508, 3.76684)
visible = false

[node name="Area3D" type="Area3D" parent="BallFuturePosition"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="BallFuturePosition/Area3D"]
shape = SubResource("BoxShape3D_5ht4i")

[node name="Ball" type="RigidBody3D" parent="." node_paths=PackedStringArray("future_position_node")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0568333, 0.949508, 3.76684)
collision_layer = 4
collision_mask = 4
axis_lock_linear_y = true
physics_material_override = SubResource("PhysicsMaterial_yho6n")
continuous_cd = true
max_contacts_reported = 1
script = ExtResource("6_i326r")
future_position_node = NodePath("../BallFuturePosition")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
transform = Transform3D(0.712953, 0, 0, 0, 0.712953, 0, 0, 0, 0.712953, 0, 0, 0)
shape = SubResource("SphereShape3D_fr8sp")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Ball/CollisionShape3D"]

[node name="Game Manager" type="Node" parent="."]
script = ExtResource("5_thfdy")

[node name="Score Manager" type="Node" parent="Game Manager"]
script = ExtResource("7_ephk5")

[node name="Timer" type="Timer" parent="Game Manager/Score Manager"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Environment/Goal A/Area3D" to="Game Manager/Score Manager" method="_on_goal_A_body_entered"]
[connection signal="body_entered" from="Environment/Goal B/Area3D" to="Game Manager/Score Manager" method="_on_area_3d_body_entered"]
[connection signal="pressed" from="UI/Pause" to="Game Manager" method="_on_pause_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Resume" to="Game Manager" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Exit" to="Game Manager" method="_on_exit_pressed"]

[editable path="UI/Virtual Joystick"]
